reformat with pycharm, though definitely not perfect

--- a/oneliners/templates/500.html
+++ b/oneliners/templates/500.html
@@ -6,19 +6,25 @@
 
 {% block content %}
 
-<div class="alert alert-error">
-    <p>Ouch! That... really... HURT!</p>
-    <p>Whatever you were trying to do, it failed, and
-    most probably it is *our* fault, NOT yours.</p>
-    <p>We want to know about this problem,
-    and for that we need a little help from you.</p>
-    <p><a href="https://github.com/janosgyerik/bashoneliners/issues/new">Please create an issue on GitHub, explaining what happened.</a></p>
-    <p>Can you reproduce the problem anytime?
-    Does it happen only sometimes or always?</p>
-    <p>If GitHub is inconvenient for you, then please email us here instead: 
-    <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a></p>
-</div>
+    <div class="alert alert-error">
+        <p>Ouch! That... really... HURT!</p>
 
-<p><a href="/">Back to the main page.</a></p>
+        <p>Whatever you were trying to do, it failed, and
+            most probably it is *our* fault, NOT yours.</p>
+
+        <p>We want to know about this problem,
+            and for that we need a little help from you.</p>
+
+        <p><a href="https://github.com/janosgyerik/bashoneliners/issues/new">Please create an issue on GitHub,
+            explaining what happened.</a></p>
+
+        <p>Can you reproduce the problem anytime?
+            Does it happen only sometimes or always?</p>
+
+        <p>If GitHub is inconvenient for you, then please email us here instead:
+            <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a></p>
+    </div>
+
+    <p><a href="/">Back to the main page.</a></p>
 
 {% endblock %}
