--- a/oneliners/templates/oneliners/pages/mission.html
+++ b/oneliners/templates/oneliners/pages/mission.html
@@ -10,24 +10,32 @@
 
 {% block content %}
 
-<p>This "mission statement" is the foundation of our website project.</p>
+    <p>This "mission statement" is the foundation of our website project.</p>
 
-<dl class="mission">
-    <dt>MISSION</dt>
-    <dd>Create a website for building a collection of practical or just pure awesome bash one-liners or shell script tips and tricks with explanations for GNU Linux and similar systems. Open, collaborative system, user friendly, with functions to contribute one-liners, request one-liners, search, rss feed, commenting, Open ID login. Open-source project, using modern web technologies.</dd>
+    <dl class="mission">
+        <dt>MISSION</dt>
+        <dd>Create a website for building a collection of practical or just pure awesome bash one-liners or shell script
+            tips and tricks with explanations for GNU Linux and similar systems. Open, collaborative system, user
+            friendly, with functions to contribute one-liners, request one-liners, search, rss feed, commenting, Open ID
+            login. Open-source project, using modern web technologies.
+        </dd>
 
-    <dt>OPPORTUNITIES</dt>
-    <dd>Knowledge exchange between bash gurus, fresh ideas by new contributors, education of users new to GNU Linux, coffee break entertainment. Also: "XYZOneLiners" &mdash; clone systems for the same purpose but different focus subject, such as jQueryOneLiners, AndroidOneLiners, ImageMagickOneLiners, or even ArduinoTips and GardeningHacks.
-    </dd>
+        <dt>OPPORTUNITIES</dt>
+        <dd>Knowledge exchange between bash gurus, fresh ideas by new contributors, education of users new to GNU Linux,
+            coffee break entertainment. Also: "XYZOneLiners" &mdash; clone systems for the same purpose but different
+            focus subject, such as jQueryOneLiners, AndroidOneLiners, ImageMagickOneLiners, or even ArduinoTips and
+            GardeningHacks.
+        </dd>
 
-    <dt>AREAS OF COLLABORATION</dt>
-    <dd>Interface design, development, documentation, translations, testing.</dd>
-    
-    <dt>SKILLS REQUIRED</dt>
-    <dd>Programming (web, mobile), web design, testing, translations, karma.</dd>
+        <dt>AREAS OF COLLABORATION</dt>
+        <dd>Interface design, development, documentation, translations, testing.</dd>
 
-</dl>
+        <dt>SKILLS REQUIRED</dt>
+        <dd>Programming (web, mobile), web design, testing, translations, karma.</dd>
 
-<p>If you are interested in joining this open-source project, head over to the <a href="{% url 'oneliners.views.sourcecode' %}">source code</a> page.</p>
+    </dl>
+
+    <p>If you are interested in joining this open-source project, head over to the <a
+            href="{% url 'oneliners.views.sourcecode' %}">source code</a> page.</p>
 
 {% endblock %}
