--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -5,95 +5,100 @@
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/b/378 -->
-  <!--
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  -->
+    <!-- Use the .htaccess and remove these lines to avoid edge case issues.
+         More info: h5bp.com/b/378 -->
+    <!--
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    -->
 
-  <title>{% block title %}{% endblock %}</title>
-  <meta name="description" content="{% block description %}{% endblock %}">
-  <meta name="author" content="Janos Gyerik info@bashoneliners.com">
+    <title>{% block title %}{% endblock %}</title>
+    <meta name="description" content="{% block description %}{% endblock %}">
+    <meta name="author" content="Janos Gyerik info@bashoneliners.com">
 
-  <!-- Mobile viewport optimized: j.mp/bplateviewport -->
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- Mobile viewport optimized: j.mp/bplateviewport -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-  <link href="{% static 'images/favicon.ico' %}?v=3" rel="icon" type="image/x-icon" />
-  <link href="{% static 'images/favicon.ico' %}?v=3" rel="shortcut icon" type="image/x-icon" />
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+    <link href="{% static 'images/favicon.ico' %}?v=3" rel="icon" type="image/x-icon"/>
+    <link href="{% static 'images/favicon.ico' %}?v=3" rel="shortcut icon" type="image/x-icon"/>
 
-  <!-- CSS: implied media=all -->
-  <!-- CSS concatenated and minified via ant build script-->
-  <link rel="stylesheet" href="{% static 'css/smoothness/jquery-ui-1.8.17.custom.css' %}">
-  <link rel="stylesheet" href="{% static 'bs3/dist/css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'jquery-upvote/jquery.upvote.css' %}">
-  <link rel="stylesheet" href="{% static 'css/bashoneliners.css' %}">
-  <!-- end CSS-->
+    <!-- CSS: implied media=all -->
+    <!-- CSS concatenated and minified via ant build script-->
+    <link rel="stylesheet" href="{% static 'css/smoothness/jquery-ui-1.8.17.custom.css' %}">
+    <link rel="stylesheet" href="{% static 'bs3/dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'jquery-upvote/jquery.upvote.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bashoneliners.css' %}">
+    <!-- end CSS-->
 
-  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+    <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
-  <!-- All JavaScript at the bottom, except for Modernizr / Respond.
-       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
-       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-       <script src="{% static 'js/libs/modernizr-2.0.6.min.js' %}"></script>
+    <!-- All JavaScript at the bottom, except for Modernizr / Respond.
+         Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
+         For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
+    <script src="{% static 'js/libs/modernizr-2.0.6.min.js' %}"></script>
 </head>
 
 <body>
-    
-    {% block navbar %}{% endblock %}
 
-    <div class="container">
+{% block navbar %}{% endblock %}
+
+<div class="container">
     {% block main %}{% endblock %}
-    </div>
+</div>
 
-    <footer class="footer">
+<footer class="footer">
     {% block footer %}{% endblock %}
-    </footer>
+</footer>
 
 
-  <!-- JavaScript at the bottom for fast page loading -->
+<!-- JavaScript at the bottom for fast page loading -->
 
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="{% static 'js/jquery-1.7.1.min.js' %}"><\/script>')</script>
-      <script>document.write('<script src="{% static 'js/jquery-ui-1.8.17.custom.min.js' %}"><\/script>')</script>
+<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{% static 'js/jquery-1.7.1.min.js' %}"><\/script>')</script>
+<script>document.write('<script src="{% static 'js/jquery-ui-1.8.17.custom.min.js' %}"><\/script>')</script>
 
 
-  <!-- scripts concatenated and minified via ant build script-->
-  <script defer src="{% static 'js/plugins.js' %}"></script>
-  <script defer src="{% static 'js/django-jquery-csrf.js' %}"></script>
-  <script defer src="{% static 'bs3/dist/js/bootstrap.min.js' %}"></script>
-  <script defer src="{% static 'js/showdown.js' %}"></script>
-  <script defer src="{% static 'jquery-upvote/jquery.upvote.js' %}"></script>
-  <script defer src="{% static 'js/bashoneliners.js' %}"></script>
-  <!-- end scripts-->
+<!-- scripts concatenated and minified via ant build script-->
+<script defer src="{% static 'js/plugins.js' %}"></script>
+<script defer src="{% static 'js/django-jquery-csrf.js' %}"></script>
+<script defer src="{% static 'bs3/dist/js/bootstrap.min.js' %}"></script>
+<script defer src="{% static 'js/showdown.js' %}"></script>
+<script defer src="{% static 'jquery-upvote/jquery.upvote.js' %}"></script>
+<script defer src="{% static 'js/bashoneliners.js' %}"></script>
+<!-- end scripts-->
 
-    <script type="text/javascript">
-	<!--
-	var App = window.App = {};
-	App.user_id = '{{ user.id }}';
-	$(document).ready(function() {
-	    {% block ready %}{% endblock %}
-	});
-	//-->
-    </script>
-	
-  <!-- Change UA-XXXXX-X to be your site's ID -->
-  <script>
-      window._gaq = [['_setAccount','{{ GOOGLE_ANALYTICS_ID }}'],['_trackPageview'],['_trackPageLoadTime']];
-    Modernizr.load({
-      load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
+<script type="text/javascript">
+    <!--
+    var App = window.App = {};
+    App.user_id = '{{ user.id }}';
+    $(document).ready(function () {
+        {% block ready %}{% endblock %}
     });
-  </script>
+    //-->
+</script>
+
+<!-- Change UA-XXXXX-X to be your site's ID -->
+<script>
+    window._gaq = [
+        ['_setAccount', '{{ GOOGLE_ANALYTICS_ID }}'],
+        ['_trackPageview'],
+        ['_trackPageLoadTime']
+    ];
+    Modernizr.load({
+        load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
+    });
+</script>
 
 
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7 ]>
+<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
+     chromium.org/developers/how-tos/chrome-frame-getting-started -->
+<!--[if lt IE 7 ]>
     <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
     <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
   <![endif]-->
