--- a/oneliners/templates/oneliners/elements/oneliner_edit_form.html
+++ b/oneliners/templates/oneliners/elements/oneliner_edit_form.html
@@ -2,13 +2,15 @@
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
     <div class="oneliner">
         <h3>Summary of the one-liner<span class="required">*</span></h3>
+
         <div class="help-block">In one sentence, what does it do? What is its purpose?</div>
         <div class="input">
             <div class="error">{{ form.summary.errors }}</div>
             <div class="summary">{{ form.summary }}</div>
         </div>
-        
+
         <h3>The one-liner<span class="required">*</span></h3>
+
         <div class="help-block">
             Use a space around <code>|</code>,
             single space after <code>;</code>,
@@ -26,8 +28,9 @@
                 {{ form.line }}
             </div>
         </div>
-        
+
         <h3>Explanation<span class="required">*</span></h3>
+
         <div class="help-block">
             <strong>This is extremely important!</strong>
             Good explanations make this site stand out,
@@ -35,35 +38,43 @@
             Explain nicely and clearly how the one-liner works,
             as if you're teaching it to your good friend.
             Include enough details so that non-experts can understand it too.
-            <br/>Note: all html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url 'oneliners.views.help_markdown' %}">markdown</a>.
+            <br/>Note: all html will be escaped, and the text will be formatted with <a class="help help-markdown"
+                                                                                        href="{% url 'oneliners.views.help_markdown' %}">markdown</a>.
         </div>
         <div class="input">
             <div class="error">{{ form.explanation.errors }}</div>
             <div class="explanation markdown">{{ form.explanation }}</div>
         </div>
-        
+
         <h3>Limitations (optional)</h3>
+
         <div class="help-block">
             Mention if you know or suspect that the one-liner
             might not work in some flavors of UNIX,
             or if it works only in Bash 4.0.
-            <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url 'oneliners.views.help_markdown' %}">markdown</a>.
-        <div class="input">
-            <div class="error">{{ form.limitations.errors }}</div>
-            <div class="limitations markdown">{{ form.limitations }}</div>
-        </div>
+            <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown"
+                                                                                        href="{% url 'oneliners.views.help_markdown' %}">markdown</a>.
+            <div class="input">
+                <div class="error">{{ form.limitations.errors }}</div>
+                <div class="limitations markdown">{{ form.limitations }}</div>
+            </div>
 
-        <h3>Published</h3>
-        <div class="help-block">If checked, the one-liner will be visible in public listings, and will be tweeted on Twitter with <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a></div>
-        <div class="input">
-            <div class="error">{{ form.is_published.errors }}</div>
-            <div class="is_published"><label class="checkbox">{{ form.is_published }} <span>Published</span></label></div>
-        </div>
+            <h3>Published</h3>
 
-        <div class="form-actions">
-            {% include 'oneliners/elements/please_login.html' %}
-            {% for action in form.actions %}<button class="btn {{ action.cssclass }}" type="submit" name="action" value="{{ action.name }}">{{ action.name }}</button>{% endfor %}
-            <button class="btn btn-default"><a href="{{ cancel_url }}">Cancel</a></button>
+            <div class="help-block">If checked, the one-liner will be visible in public listings, and will be tweeted on
+                Twitter with <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a></div>
+            <div class="input">
+                <div class="error">{{ form.is_published.errors }}</div>
+                <div class="is_published"><label class="checkbox">{{ form.is_published }} <span>Published</span></label>
+                </div>
+            </div>
+
+            <div class="form-actions">
+                {% include 'oneliners/elements/please_login.html' %}
+                {% for action in form.actions %}
+                    <button class="btn {{ action.cssclass }}" type="submit" name="action" value="{{ action.name }}">
+                    {{ action.name }}</button>{% endfor %}
+                <button class="btn btn-default"><a href="{{ cancel_url }}">Cancel</a></button>
+            </div>
         </div>
-    </div>
 </form>
