--- a/oneliners/templates/oneliners/feeds/question.html
+++ b/oneliners/templates/oneliners/feeds/question.html
@@ -1,10 +1,11 @@
 {% load markup %}
 {% with obj as question %}
-        <blockquote>
-            <p>{{ question.explanation }}</p>
-            <small>
-                by <a href="{% url 'oneliners.views.profile' question.user.pk %}">{{ question.user.hackerprofile.get_display_name }}</a>
-                on {{ question.created_dt }}
-            </small>
-        </blockquote>
+    <blockquote>
+        <p>{{ question.explanation }}</p>
+        <small>
+            by <a
+                href="{% url 'oneliners.views.profile' question.user.pk %}">{{ question.user.hackerprofile.get_display_name }}</a>
+            on {{ question.created_dt }}
+        </small>
+    </blockquote>
 {% endwith %}
