--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -3,7 +3,7 @@
 {% block pagetitle %}bashoneliners.com{% endblock %}
 
 {% block pageheader %}
-bashoneliners.com
+    bashoneliners.com
     {% if SERVER_NAME != 'www.bashoneliners.com' %}
         <a href="http://bashoneliners.com/" class="btn btn-success pull-right">bashoneliners.com</a>
     {% endif %}
@@ -12,42 +12,46 @@ bashoneliners.com
     {% endif %}
 {% endblock %}
 
-{% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, linux, unix, vote, rank, rss, open-source, django, python, git, github, bazaar, launchpad, collaborate{% endblock %}
+{% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, linux, unix, vote, rank, rss,
+    open-source, django, python, git, github, bazaar, launchpad, collaborate{% endblock %}
 
-{% block description %}A collection of practical and well-explained bash one-liners and shell script tips and tricks for GNU Linux, UNIX or BSD systems. Post your clever one-liners, search, subscribe to our feeds, login using Open ID. Open-source project, using Django, Python, jQuery, Git, GitHub, Bazaar, Launchpad, HTML5, Bootstrap from Twitter.{% endblock %}
+{% block description %}A collection of practical and well-explained bash one-liners and shell script tips and tricks for
+    GNU Linux, UNIX or BSD systems. Post your clever one-liners, search, subscribe to our feeds, login using Open ID.
+    Open-source project, using Django, Python, jQuery, Git, GitHub, Bazaar, Launchpad, HTML5, Bootstrap from
+    Twitter.{% endblock %}
 
 {% block content %}
 
-<div class="alert alert-block alert-info">
-We aim to collect <strong>practical</strong>, 
-<strong>well-explained</strong> bash one-liners,
-and <strong>promote best practices</strong> in shell scripting.
-To get the latest bash one-liners,
-follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter,
-or subscribe to our <a href="{% url 'oneliners.feeds.oneliner' %}">rss feed</a>.
-If you find any problems,
-<a href="https://github.com/janosgyerik/bashoneliners/issues">report a bug on GitHub</a>,
-or send an email to our <a href="mailto:bashoneliners@googlegroups.com">public mailing list</a>
-or <a href="mailto:info@bashoneliners.com">private email</a>.
-</div>
+    <div class="alert alert-block alert-info">
+        We aim to collect <strong>practical</strong>,
+        <strong>well-explained</strong> bash one-liners,
+        and <strong>promote best practices</strong> in shell scripting.
+        To get the latest bash one-liners,
+        follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter,
+        or subscribe to our <a href="{% url 'oneliners.feeds.oneliner' %}">rss feed</a>.
+        If you find any problems,
+        <a href="https://github.com/janosgyerik/bashoneliners/issues">report a bug on GitHub</a>,
+        or send an email to our <a href="mailto:bashoneliners@googlegroups.com">public mailing list</a>
+        or <a href="mailto:info@bashoneliners.com">private email</a>.
+    </div>
 
-<h2>Tags</h2>
+    <h2>Tags</h2>
 
-<ul class="nav nav-pills tags">
-{% for tag in tagcloud %}
-<li><a href="#">{{ tag.text }}</a></li>
-{% endfor %}
-</ul>
+    <ul class="nav nav-pills tags">
+        {% for tag in tagcloud %}
+            <li><a href="#">{{ tag.text }}</a></li>
+        {% endfor %}
+    </ul>
 
-{% include 'oneliners/elements/oneliners_nav.html' %}
+    {% include 'oneliners/elements/oneliners_nav.html' %}
 
-<h2 class="page-header">One-Liners
-    {% if user.is_authenticated %}
-    <a href="{% url 'oneliners.views.oneliner_new' %}" class="btn btn-primary pull-right">Post a one-liner</a>
-    {% endif %}
-</h2>
+    <h2 class="page-header">One-Liners
+        {% if user.is_authenticated %}
+            <a href="{% url 'oneliners.views.oneliner_new' %}" class="btn btn-primary pull-right">Post a one-liner</a>
+        {% endif %}
+    </h2>
 
-{% include 'oneliners/elements/oneliners_page.html' %}
+    {% include 'oneliners/elements/oneliners_page.html' %}
 
 {% endblock %}
 
@@ -56,49 +60,49 @@ or <a href="mailto:info@bashoneliners.com">private email</a>.
     var selected_tag;
 
     function search_by_tag() {
-        var options = {
-            url: '{% url 'oneliners.ajax.search_by_tag' %}',
-            type: 'get',
-            data: {
-                'tag': selected_tag,
-                'ordering': ordering
-            },
-            success: search_success
-        };
-        $.ajax(options);
+    var options = {
+    url: '{% url 'oneliners.ajax.search_by_tag' %}',
+    type: 'get',
+    data: {
+    'tag': selected_tag,
+    'ordering': ordering
+    },
+    success: search_success
+    };
+    $.ajax(options);
     }
 
     function search_success(html) {
-        $('.oneliners').html($(html).html());
-        $('.pagination').remove();
-        bind_comments_toggle();
-        bind_upvote();
-        //footer_fix();
-        bind_dblclick_to_select_oneliner();
+    $('.oneliners').html($(html).html());
+    $('.pagination').remove();
+    bind_comments_toggle();
+    bind_upvote();
+    //footer_fix();
+    bind_dblclick_to_select_oneliner();
     }
 
     $('.tags a').click(function(e) {
-        e.preventDefault();
-        if ($(this).parent().hasClass('active')) {
-            selected_tag = null;
-            $(this).parent().removeClass('active');
-            location.reload();
-        } else {
-            $('.tags li.active').removeClass('active');
-            $(this).parent().addClass('active');
-            selected_tag = $(this).text();
-            search_by_tag();
-        }
+    e.preventDefault();
+    if ($(this).parent().hasClass('active')) {
+    selected_tag = null;
+    $(this).parent().removeClass('active');
+    location.reload();
+    } else {
+    $('.tags li.active').removeClass('active');
+    $(this).parent().addClass('active');
+    selected_tag = $(this).text();
+    search_by_tag();
+    }
     });
 
     $('.nav-oneliners li a').click(function(e) {
-        if (selected_tag) {
-            e.preventDefault();
-            $('.nav-oneliners li').removeClass('active');
-            $(this).parent().addClass('active');
-            ordering = $(this).attr('data-ordering');
-            search_by_tag();
-        }
+    if (selected_tag) {
+    e.preventDefault();
+    $('.nav-oneliners li').removeClass('active');
+    $(this).parent().addClass('active');
+    ordering = $(this).attr('data-ordering');
+    search_by_tag();
+    }
     });
 
 {% endblock %}
