--- a/oneliners/templates/oneliners/pages/oneliner_edit.html
+++ b/oneliners/templates/oneliners/pages/oneliner_edit.html
@@ -10,38 +10,45 @@
 
 {% block content %}
 
-{% if question %}
-<div class="alert alert-info related">
-    <p>The new one-liner will be linked to the following question as a possible answer:</p>
-    {% with 1 as nobuttons %}
-    {% include 'oneliners/elements/question.html' %}
-    {% endwith %}
-</div>
-{% endif %}
+    {% if question %}
+        <div class="alert alert-info related">
+            <p>The new one-liner will be linked to the following question as a possible answer:</p>
+            {% with 1 as nobuttons %}
+                {% include 'oneliners/elements/question.html' %}
+            {% endwith %}
+        </div>
+    {% endif %}
 
-{% if oneliner %}
-<div class="alert alert-info related">
-    <p>The new one-liner will be linked to the following one-liner as an alternative:</p>
-    {% with 1 as nobuttons %}
-        {% with oneliner.score as score %}
-            {% include 'oneliners/elements/oneliner.html' %}
-        {% endwith %}
-    {% endwith %}
-</div>
-{% endif %}
+    {% if oneliner %}
+        <div class="alert alert-info related">
+            <p>The new one-liner will be linked to the following one-liner as an alternative:</p>
+            {% with 1 as nobuttons %}
+                {% with oneliner.score as score %}
+                    {% include 'oneliners/elements/oneliner.html' %}
+                {% endwith %}
+            {% endwith %}
+        </div>
+    {% endif %}
 
-{% include 'oneliners/elements/please_login.html' %}
+    {% include 'oneliners/elements/please_login.html' %}
 
-<ul>
-    <li>Before you post, please do a quick search to check if a similar one-liner already exists. If it does, and you think your version is better, you can post it as an <em>alternative</em> one-liner, and the two will be linked together.</li>
-    <li>Please post only non-trivial, practical one-liners that are actually useful for something in real life, and in not too extreme, limited situations. Pure awesome wicked-cool one-liners are OK too.</li>
-    <li>The <strong>Explanation</strong> is very important. The purpose of this site is to teach, not to show off. Please write nicely, explain clearly, as if teaching a trick to your friend.</li>
-</ul>
+    <ul>
+        <li>Before you post, please do a quick search to check if a similar one-liner already exists. If it does, and
+            you think your version is better, you can post it as an <em>alternative</em> one-liner, and the two will be
+            linked together.
+        </li>
+        <li>Please post only non-trivial, practical one-liners that are actually useful for something in real life, and
+            in not too extreme, limited situations. Pure awesome wicked-cool one-liners are OK too.
+        </li>
+        <li>The <strong>Explanation</strong> is very important. The purpose of this site is to teach, not to show off.
+            Please write nicely, explain clearly, as if teaching a trick to your friend.
+        </li>
+    </ul>
 
-{% include 'oneliners/elements/oneliner_edit_form.html' %}
+    {% include 'oneliners/elements/oneliner_edit_form.html' %}
 
 {% endblock %}
 
 {% block ready %}
-	$('#id_summary').focus();
+    $('#id_summary').focus();
 {% endblock %}
