--- a/oneliners/templates/oneliners/pages/question_edit.html
+++ b/oneliners/templates/oneliners/pages/question_edit.html
@@ -10,18 +10,24 @@
 
 {% block content %}
 
-{% include 'oneliners/elements/please_login.html' %}
+    {% include 'oneliners/elements/please_login.html' %}
 
-<ul>
-    <li>Before you post, please do a quick search to confirm there is no one-liner that already answers your question.</li>
-    <li>After you post a question, it will be listed on the <a href="{% url 'oneliners.views.question_list' %}">Questions</a> page, and other users can suggest (possibly many) one-liners that answer it.</li>
-    <li>You can track your questions on your <a href="{% url 'oneliners.views.profile' %}">profile</a> page, and mark them <strong>Answered</strong> to remove them from the list of open questions.</li>
-</ul>
+    <ul>
+        <li>Before you post, please do a quick search to confirm there is no one-liner that already answers your
+            question.
+        </li>
+        <li>After you post a question, it will be listed on the <a href="{% url 'oneliners.views.question_list' %}">Questions</a>
+            page, and other users can suggest (possibly many) one-liners that answer it.
+        </li>
+        <li>You can track your questions on your <a href="{% url 'oneliners.views.profile' %}">profile</a> page, and
+            mark them <strong>Answered</strong> to remove them from the list of open questions.
+        </li>
+    </ul>
 
-{% include 'oneliners/elements/question_edit_form.html' %}
+    {% include 'oneliners/elements/question_edit_form.html' %}
 
 {% endblock content %}
 
 {% block ready %}
-	$('#id_summary').focus();
+    $('#id_summary').focus();
 {% endblock %}
