--- a/oneliners/templates/oneliners/pages/question_list.html
+++ b/oneliners/templates/oneliners/pages/question_list.html
@@ -10,37 +10,38 @@
 
 {% block content %}
 
-<div style="margin-bottom: 2em">
+    <div style="margin-bottom: 2em">
 
-<p>If you have a question that can be answered by an appropriate bash one-liner,
-feel free to ask it here.</p>
+        <p>If you have a question that can be answered by an appropriate bash one-liner,
+            feel free to ask it here.</p>
 
-{% if user.is_authenticated %}
-    {% if not questions %}
-        <p><a href="{% url 'oneliners.views.question_new' %}" class="btn btn-primary">Post a question</a></p>
+        {% if user.is_authenticated %}
+            {% if not questions %}
+                <p><a href="{% url 'oneliners.views.question_new' %}" class="btn btn-primary">Post a question</a></p>
+            {% endif %}
+        {% else %}
+            <div class="alert alert-warning">
+                <strong class="alert-heading">Note:</strong>
+                you have to <a href="{% url 'oneliners.views.login' %}">login (with an OpenID)</a> to post a question.
+            </div>
+        {% endif %}
+
+    </div>
+
+    {% if questions %}
+        <h2 class="page-header">Recent questions
+            {% if user.is_authenticated %}
+                <a href="{% url 'oneliners.views.question_new' %}" class="btn btn-primary pull-right">Post a
+                    question</a>
+            {% endif %}
+        </h2>
+
+        {% include 'oneliners/elements/questions.html' %}
+
     {% endif %}
-{% else %}
-<div class="alert alert-warning">
-    <strong class="alert-heading">Note:</strong>
-    you have to <a href="{% url 'oneliners.views.login' %}">login (with an OpenID)</a> to post a question. 
-</div>
-{% endif %}
-
-</div>
-
-{% if questions %}
-<h2 class="page-header">Recent questions
-    {% if user.is_authenticated %}
-    <a href="{% url 'oneliners.views.question_new' %}" class="btn btn-primary pull-right">Post a question</a>
-    {% endif %}
-</h2>
-
-{% include 'oneliners/elements/questions.html' %}
-
-{% endif %}
 
 {% endblock %}
 
 {% block ready %}
-	$('#id_summary').focus();
+    $('#id_summary').focus();
 {% endblock %}
