--- a/oneliners/templates/oneliners/pages/sourcecode.html
+++ b/oneliners/templates/oneliners/pages/sourcecode.html
@@ -6,87 +6,90 @@
 
 {% block content %}
 
-<div class="alert alert-block alert-info">
-The site is still pretty far from what we want it to be.
-Mainly we need more Django coders,
-but also reviewers and helpful comments on the not-so-well-written one-liners.
-At the minimum it would help a lot if you could spread the word and talk about this site on Twitter, Google+, Facebook,
-or your other social outlets. All of them.
-</div>
+    <div class="alert alert-block alert-info">
+        The site is still pretty far from what we want it to be.
+        Mainly we need more Django coders,
+        but also reviewers and helpful comments on the not-so-well-written one-liners.
+        At the minimum it would help a lot if you could spread the word and talk about this site on Twitter, Google+,
+        Facebook,
+        or your other social outlets. All of them.
+    </div>
 
-<p>
-This page should give you all the links,
-resources and contact info that you might need to participate in this project.
-Do <a href="mailto:info@bashoneliners.com">let us know</a> if we missed something.
-</p>
+    <p>
+        This page should give you all the links,
+        resources and contact info that you might need to participate in this project.
+        Do <a href="mailto:info@bashoneliners.com">let us know</a> if we missed something.
+    </p>
 
-<p>Right now the site is still pretty far from what we want it to be.</p>
+    <p>Right now the site is still pretty far from what we want it to be.</p>
 
-<ul>
-    <li>
-        <strong>Perfect one-liners following today's best-practices:</strong>
-        Expert users should be able to edit and improve poorly written one-liners.
-        The site needs peer-review and collaborative editing features,
-        similar to <a href="http://stackoverflow.com/">stackoverflow.com</a>.
-        Keep in mind that StackOverflow is about questions and answers.
-        On StackOverflow, answers do not collaborate with each other,
-        and very often the accepted answer is not the best solution.
-        Very often the combination of multiple answers is the best solution.
-        Our goal here is to encourage users to optimize the heck out of every single one-liner until it is perfect.
-    </li>
-    <li>
-        <strong>Gamification:</strong>
-        Gamification features are probably crucial to attract more users,
-        and for keeping existing users interested.
-        Designing the system is a very complex subject,
-        it takes much more than just coding.
-    </li>
-</ul>
+    <ul>
+        <li>
+            <strong>Perfect one-liners following today's best-practices:</strong>
+            Expert users should be able to edit and improve poorly written one-liners.
+            The site needs peer-review and collaborative editing features,
+            similar to <a href="http://stackoverflow.com/">stackoverflow.com</a>.
+            Keep in mind that StackOverflow is about questions and answers.
+            On StackOverflow, answers do not collaborate with each other,
+            and very often the accepted answer is not the best solution.
+            Very often the combination of multiple answers is the best solution.
+            Our goal here is to encourage users to optimize the heck out of every single one-liner until it is perfect.
+        </li>
+        <li>
+            <strong>Gamification:</strong>
+            Gamification features are probably crucial to attract more users,
+            and for keeping existing users interested.
+            Designing the system is a very complex subject,
+            it takes much more than just coding.
+        </li>
+    </ul>
 
-<p>To make all these things happen we need more Django coders,
-espeically with gamification experience.</p>
+    <p>To make all these things happen we need more Django coders,
+        espeically with gamification experience.</p>
 
-<dl class="sourcecode">
-    <dt>Get the source code -- {{ 'https://github.com/janosgyerik/bashoneliners'|urlize }}</dt>
-    <dd>
-        <pre>git clone https://github.com/janosgyerik/bashoneliners.git</pre>
-    </dd>
+    <dl class="sourcecode">
+        <dt>Get the source code -- {{ 'https://github.com/janosgyerik/bashoneliners'|urlize }}</dt>
+        <dd>
+            <pre>git clone https://github.com/janosgyerik/bashoneliners.git</pre>
+        </dd>
 
-    <dt>Task management, upcoming features, todo lists</dt>
-    <dd>
-        <a href="https://trello.com/b/PdQFoRDt/bash-one-liners">https://trello.com/b/PdQFoRDt/bash-one-liners</a>
-    </dd>
+        <dt>Task management, upcoming features, todo lists</dt>
+        <dd>
+            <a href="https://trello.com/b/PdQFoRDt/bash-one-liners">https://trello.com/b/PdQFoRDt/bash-one-liners</a>
+        </dd>
 
-    <dt>Issue tracking, bug reports</dt>
-    <dd>
-        <a href="https://github.com/janosgyerik/bashoneliners/issues">https://github.com/janosgyerik/bashoneliners/issues</a>
-    </dd>
+        <dt>Issue tracking, bug reports</dt>
+        <dd>
+            <a href="https://github.com/janosgyerik/bashoneliners/issues">https://github.com/janosgyerik/bashoneliners/issues</a>
+        </dd>
 
-    <dt>Mailing list address</dt>
-    <dd>
-        <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a>
-        <p><em>Messages you send here will be publicly visible.</em></p>
-    </dd>
+        <dt>Mailing list address</dt>
+        <dd>
+            <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a>
 
-    <dt>Mailing list public archive</dt>
-    <dd><a href="http://groups.google.com/group/bashoneliners/topics">http://groups.google.com/group/bashoneliners/topics</a></dd>
+            <p><em>Messages you send here will be publicly visible.</em></p>
+        </dd>
 
-    <dt>Private contact</dt>
-    <dd><a href="mailto:info@bashoneliners.com">info@bashoneliners.com</a></dd>
+        <dt>Mailing list public archive</dt>
+        <dd><a href="http://groups.google.com/group/bashoneliners/topics">http://groups.google.com/group/bashoneliners/topics</a>
+        </dd>
 
-    <dt>Alternative source code repositories</dt>
-    <dd>
-        <p>These are usually not up to date. Drop us an email and we can update them if you prefer.</p>
-        <ul>
-            <li>Using Bazaar -- {{ "https://launchpad.net/bashoneliners"|urlize }}
-                <pre>bzr branch lp:bashoneliners</pre>
-            </li>
-            <li>Using Subversion -- {{ "https://code.google.com/p/bashoneliners/"|urlize }}
-                <pre>svn checkout http://bashoneliners.googlecode.com/svn/trunk bashoneliners</pre>
-            </li>
-        </ul>
-    </dd>
+        <dt>Private contact</dt>
+        <dd><a href="mailto:info@bashoneliners.com">info@bashoneliners.com</a></dd>
 
-</dl>
+        <dt>Alternative source code repositories</dt>
+        <dd>
+            <p>These are usually not up to date. Drop us an email and we can update them if you prefer.</p>
+            <ul>
+                <li>Using Bazaar -- {{ "https://launchpad.net/bashoneliners"|urlize }}
+                    <pre>bzr branch lp:bashoneliners</pre>
+                </li>
+                <li>Using Subversion -- {{ "https://code.google.com/p/bashoneliners/"|urlize }}
+                    <pre>svn checkout http://bashoneliners.googlecode.com/svn/trunk bashoneliners</pre>
+                </li>
+            </ul>
+        </dd>
+
+    </dl>
 
 {% endblock %}
