fixed comment style

--- a/oneliners/templates/oneliners/pages/oneliner_comment.html
+++ b/oneliners/templates/oneliners/pages/oneliner_comment.html
@@ -30,12 +30,12 @@
         <h3>Comment<span class="required">*</span></h3>
 
         <div class="help-block"></div>
-        <div class="input">
+        <div class="input form-group">
             <div class="error">{{ form.comment.errors }}</div>
             <div class="comment">{{ form.comment }}</div>
         </div>
 
-        <div class="form-actions">
+        <div class="form-group">
             {% include 'oneliners/elements/please_login.html' %}
             <button class="btn btn-primary" type="submit" name="submit" value="Post">Post</button>
             <button class="btn btn-default"><a href="{{ cancel_url }}">Cancel</a></button>
