--- a/oneliners/templates/oneliners/elements/comment.html
+++ b/oneliners/templates/oneliners/elements/comment.html
@@ -3,8 +3,7 @@
     <blockquote>
         <p>{{ comment.comment|markdown:"safe" }}</p>
         <small>
-            by <a
-                href="{% url 'oneliners.views.profile' comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span>
+            by <a href="{% url 'oneliners.views.profile' comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span>
         </a>
             on <span>{{ comment.submit_date }}</span>
         </small>
@@ -13,8 +12,7 @@
             {% if model == 'oneliner' %}
                 {% with comment.content_object as oneliner %}
                     <div class="{{ model }}">
-                        <h3 class="summary"><a
-                                href="{% url 'oneliners.views.oneliner' oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
+                        <h3 class="summary"><a href="{% url 'oneliners.views.oneliner' oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
                         </h3>
                         <pre><span class="add-on">bash$ </span>{{ oneliner.line }}</pre>
                     </div>
